Various small fixes on deviceinfo page * Reduce whitespace in generated source * Make "maintainers" singular if there is only one * Remove additional quote in header tag for "Carrier" * Make modelname bold in battery section to match   "screen" and "dimensions"   * That way it's easier to distinguish the models

--- a/_sass/craft/_main.scss
+++ b/_sass/craft/_main.scss
@@ -200,6 +200,7 @@ pre {
 tr.discontinued,
 tr.discontinued a {
   opacity: 0.8;
+  color: #161616;
 }
 
 // Make sure toc-targets are actually displayed, not hidden by the navbar
